src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ALevels_or_equivalent_qualifications__c</fullName>
        <label>A-Levels (Or Equivalent) Qualifications?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_Level_Equivalent_Details__c</fullName>
        <description>Please provide further details of the subjects and grades (A Level equivalent)</description>
        <label>A Level Equivalent Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adaptability_Concern__c</fullName>
        <label>Adaptability Concern</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adaptability_Score__c</fullName>
        <inlineHelpText>Score should be out of 5</inlineHelpText>
        <label>Adaptability Score (Deprecated)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Location_Nearest_Town_City__c</fullName>
        <description>Tutor&apos;s nearest town/ city</description>
        <label>Additional Location - Nearest Town/ City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Work_Region__c</fullName>
        <label>Additional Work Regions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Preferred_Working_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_communications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>I am happy to receive ‘additional communications’ from Get Further (e.g. progress updates, event invitations, education policy news, etc.).</description>
        <label>Opted Into Additional Communications?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agrees_to_Minimum_12_Week_Commitment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agrees to Minimum 12 Week Commitment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment_Centre_Date__c</fullName>
        <label>Assessment Centre Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Centre_Time_Slot__c</fullName>
        <label>Assessment Centre Time Slot</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attended_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the Tutor attended their training session?</description>
        <label>Attended Training?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attentiveness_Concern__c</fullName>
        <label>Attentiveness Concern</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attentiveness_Score__c</fullName>
        <inlineHelpText>Score should be out of 5</inlineHelpText>
        <label>Attentiveness Score (Deprecated)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attentiveness_and_Adaptability_Score__c</fullName>
        <inlineHelpText>Score should be out of 5</inlineHelpText>
        <label>Attentiveness and Adaptability Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building_Relationships_Score__c</fullName>
        <inlineHelpText>Score should be out of 5</inlineHelpText>
        <label>Building Relationships Score(Deprecated)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building_relationships_Concern__c</fullName>
        <label>Building Relationships Concern</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentsorQuestions__c</fullName>
        <inlineHelpText>Please let us know if you have any comments or questions regarding your participation in the Get Further programme:</inlineHelpText>
        <label>Comments or Questions</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comms_and_Building_Relationships_Score__c</fullName>
        <inlineHelpText>Score should be out of 5</inlineHelpText>
        <label>Comms and Building Relationships Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Communication_Concern__c</fullName>
        <label>Communication Concern</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Score__c</fullName>
        <inlineHelpText>Score should be out of 5</inlineHelpText>
        <label>Communication Score (Deprecated)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complete_GetFurther_Programme__c</fullName>
        <description>Please indicate if you are able to meet the required time commitment for the Get Further programme (if your application is successful):</description>
        <label>Complete GetFurther Programme</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agrees to full programme</fullName>
                </value>
                <value>
                    <fullName>Unable to tutor past January</fullName>
                </value>
                <value>
                    <fullName>Unsure if can tutor past January</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_Tutoring_Locations__c</fullName>
        <description>Locations this tutor is confirmed to be tutoring at (temporary field).</description>
        <inlineHelpText>This is a temporary field for capturing tutoring locations. This may change in future, as a new data schema for tutor matching is designed.</inlineHelpText>
        <label>Confirmed Tutoring Locations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Location_Preference_Next_Academic_Year</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConsenttoPersonalInfoBeingProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>[I consent for sensitive personal information to be processed as set out in this notice.]</inlineHelpText>
        <label>Consent to Personal Info Being Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_A_Level_Subject_1__c</fullName>
        <label>A Level Subject 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_A_Level_Subject_2__c</fullName>
        <label>A Level Subject 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_A_Level_Subject_3__c</fullName>
        <label>A Level Subject 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Candidate_Number__c</fullName>
        <label>Candidate Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_College_URN__c</fullName>
        <label>College URN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Completion_Year__c</fullName>
        <label>Completion Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_DBS_Status__c</fullName>
        <label>DBS Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Date_of_Birth__c</fullName>
        <description>Date (DD/MM/YYYY)</description>
        <inlineHelpText>DD/MM/YYYY</inlineHelpText>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Disability__c</fullName>
        <description>Under the Equality Act 2010 a person is classified as disabled if they have a physical or mental impairment which has a substantial and long term effect on their ability to carry out normal day to day activities.</description>
        <label>Living With A Disability?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>White English Welsh Scottish Northern Irish British</fullName>
                    <label>White English / Welsh / Scottish / Northern Irish / British</label>
                </value>
                <value>
                    <fullName>White other</fullName>
                </value>
                <value>
                    <fullName>Mixed multiple ethnic groups</fullName>
                    <label>Mixed / multiple ethnic groups</label>
                </value>
                <value>
                    <fullName>Asian Asian British</fullName>
                    <label>Asian / Asian British</label>
                </value>
                <value>
                    <fullName>Black African Caribbean Black British</fullName>
                    <label>Black / African / Caribbean / Black British</label>
                </value>
                <value>
                    <fullName>Other ethnic group</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_GCSE_GradeC__c</fullName>
        <description>Do you have a UK GCSE (or equivalent) grade C or above in maths and English Language? *</description>
        <label>UK GCSE Equivalent at Grade C or Above?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Gender__c</fullName>
        <description>What gender do you most identify with?</description>
        <label>Gender Most Identified With</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Non-Binary</fullName>
                </value>
                <value>
                    <fullName>Prefer not to answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Grade_1__c</fullName>
        <label>Grade 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A star</fullName>
                    <label>A*</label>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Grade_2__c</fullName>
        <label>Grade 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A star</fullName>
                    <label>A*</label>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Grade_3__c</fullName>
        <label>Grade 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A star</fullName>
                    <label>A*</label>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Grade_Classification__c</fullName>
        <label>Grade Classification</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Nationality__c</fullName>
        <description>What is your Nationality?</description>
        <label>Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghan</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Algerian</fullName>
                </value>
                <value>
                    <fullName>American</fullName>
                </value>
                <value>
                    <fullName>Andorran</fullName>
                </value>
                <value>
                    <fullName>Angolan</fullName>
                </value>
                <value>
                    <fullName>Antiguans</fullName>
                </value>
                <value>
                    <fullName>Argentinean</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Australian</fullName>
                </value>
                <value>
                    <fullName>Austrian</fullName>
                </value>
                <value>
                    <fullName>Azerbaijani</fullName>
                </value>
                <value>
                    <fullName>Bahamian</fullName>
                </value>
                <value>
                    <fullName>Bahraini</fullName>
                </value>
                <value>
                    <fullName>Bangladeshi</fullName>
                </value>
                <value>
                    <fullName>Barbadian</fullName>
                </value>
                <value>
                    <fullName>Barbudans</fullName>
                </value>
                <value>
                    <fullName>Batswana</fullName>
                </value>
                <value>
                    <fullName>Belarusian</fullName>
                </value>
                <value>
                    <fullName>Belgian</fullName>
                </value>
                <value>
                    <fullName>Belizean</fullName>
                </value>
                <value>
                    <fullName>Beninese</fullName>
                </value>
                <value>
                    <fullName>Bhutanese</fullName>
                </value>
                <value>
                    <fullName>Bolivian</fullName>
                </value>
                <value>
                    <fullName>Bosnian</fullName>
                </value>
                <value>
                    <fullName>Brazilian</fullName>
                </value>
                <value>
                    <fullName>British</fullName>
                </value>
                <value>
                    <fullName>Bruneian</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Burkinabe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Notified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>I wish to be notified of volunteering opportunities.</description>
        <label>Notified of Volunteering Opportunities?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Other_A_Level_qualifications__c</fullName>
        <label>Other A-Level qualifications?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Other_relevant_qualifications__c</fullName>
        <description>Have you obtained any other relevant qualifications (e.g. Masters, teacher training)? Please provide details:</description>
        <label>Other Relevant Qualifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Preferred_subject_to_tutor__c</fullName>
        <description>Select the subject/s you would like to tutor:</description>
        <label>Preferred Subject To Tutor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maths</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Either</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Record_Type_Conversion__c</fullName>
        <description>Field used to capture the type of record as a string, and pass this through to the converted contact/account record. A workflow will then check for this value on contact/account creation, and update the record type to match.</description>
        <label>Contact Record Type (Conversion)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                    <default>true</default>
                    <label>Confirmed</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Checked</fullName>
                    <isActive>false</isActive>
                    <label>Checked</label>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                    <isActive>false</isActive>
                    <label>Deferred</label>
                </value>
                <value>
                    <fullName>Matching</fullName>
                    <isActive>false</isActive>
                    <label>Matching</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <isActive>false</isActive>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Pooled or Tutoring</fullName>
                    <isActive>false</isActive>
                    <label>Pooled or Tutoring</label>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                    <isActive>false</isActive>
                    <label>Unresponsive</label>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                    <isActive>false</isActive>
                    <label>Withdrawn</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Subject__c</fullName>
        <label>Subject / Area of study</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_University__c</fullName>
        <label>University or Institution</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courses_Studying_This_Year__c</fullName>
        <inlineHelpText>Please provide the name of the course(s) you are studying this year:</inlineHelpText>
        <label>Courses Studying This Year</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DBS_Certificate_Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DBS Certificate Checked?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DBS_Certificate_Issue_Date__c</fullName>
        <label>DBS Certificate Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DBS_Certificate_Number__c</fullName>
        <description>12 digit DBS certificate number. &quot;Text&quot; data type to allow leading zeros.</description>
        <label>DBS Certificate Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBS_Checked_Document_1__c</fullName>
        <inlineHelpText>The name of a DBS document checked</inlineHelpText>
        <label>DBS: Checked Document 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBS_Checked_Document_2__c</fullName>
        <inlineHelpText>The name of a DBS document checked</inlineHelpText>
        <label>DBS: Checked Document 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBS_Checked_Document_3__c</fullName>
        <inlineHelpText>The name of a DBS document checked</inlineHelpText>
        <label>DBS: Checked Document 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBS_Date_Checked__c</fullName>
        <label>DBS: Date Checked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DBS_Reviewed_Date__c</fullName>
        <label>DBS Reviewed Date (Deprecated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DBS_Staff_Member_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Staff member responsible for checking the DBS documents</inlineHelpText>
        <label>DBS: Staff Member Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_you_have_an_undergraduate_degree__c</fullName>
        <label>Has An Undergraduate Degree?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_any_criminal_convictions__c</fullName>
        <description>Do you have any convictions, cautions, reprimands or final warnings that are not &quot;protected&quot; as defined by the Rehabilitation of Offenders Act 1974 (Exceptions) Order 1975 (as amended in 2013)?</description>
        <label>Has Any Criminal Convictions?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drive_and_Commitment_Concern__c</fullName>
        <label>Drive and Commitment Concern</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drive_and_Commitment_Score__c</fullName>
        <inlineHelpText>Score should be out of 5</inlineHelpText>
        <label>Drive and Commitment Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Educated_at_a_further_education_college__c</fullName>
        <label>Educated At A Further Education College?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_SMS_Consent__c</fullName>
        <defaultValue>true</defaultValue>
        <description>happy to receive text messages or emails from Get Further about tutoring sessions and
upcoming events.</description>
        <inlineHelpText>Happy to receive text messages or emails from Get Further about tutoring sessions and
upcoming events.</inlineHelpText>
        <label>Email &amp; SMS Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Empathy_and_Respect_Concern__c</fullName>
        <label>Empathy and Respect Concern</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Empathy_and_Respect_Score__c</fullName>
        <inlineHelpText>Score should be out of 5</inlineHelpText>
        <label>Empathy and Respect Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employment_Start_Date__c</fullName>
        <description>Initial start date of employment as a tutor with Get Further. Please consult contracts for more information.</description>
        <label>Employment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>English_Test_Outcome__c</fullName>
        <description>The outcome of the prospective tutor&apos;s english subject knowledge test. This is pre-screening before their application is reviewed.</description>
        <label>English Test Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subject_Knowledge_Test_Outcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>English_Tutor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This tutor applicant has been accepted for matching to English tutoring placements.</description>
        <label>English Tutor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Equivalent_A_Level_Qualifications__c</fullName>
        <description>Do you have equivalent qualifications? (To A Levels)</description>
        <label>Equivalent A Level Qualifications</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EthnicGroupBackground__c</fullName>
        <label>Ethnic Group/Background</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>White British</fullName>
                </value>
                <value>
                    <fullName>Irish</fullName>
                </value>
                <value>
                    <fullName>Traveller of Irish heritage</fullName>
                </value>
                <value>
                    <fullName>Gypsy / Roma</fullName>
                </value>
                <value>
                    <fullName>Any other white background</fullName>
                </value>
                <value>
                    <fullName>White and black Caribbean</fullName>
                </value>
                <value>
                    <fullName>White and black African</fullName>
                </value>
                <value>
                    <fullName>White and Asian</fullName>
                </value>
                <value>
                    <fullName>Any other mixed background</fullName>
                </value>
                <value>
                    <fullName>Indian</fullName>
                </value>
                <value>
                    <fullName>Pakistani</fullName>
                </value>
                <value>
                    <fullName>Bangladeshi</fullName>
                </value>
                <value>
                    <fullName>Any other Asian background</fullName>
                </value>
                <value>
                    <fullName>Black Caribbean</fullName>
                </value>
                <value>
                    <fullName>Black African</fullName>
                </value>
                <value>
                    <fullName>Any other black background</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Any other ethnic group</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EverHadaSocialWorker__c</fullName>
        <label>Ever Had a Social Worker</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Tuition_Session_Time__c</fullName>
        <label>First Tuition Session Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>For_dietary_requirements_please_select__c</fullName>
        <label>Dietary Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
                <value>
                    <fullName>Vegan</fullName>
                </value>
                <value>
                    <fullName>Gluten-free</fullName>
                </value>
                <value>
                    <fullName>Halal</fullName>
                </value>
                <value>
                    <fullName>Kosher</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>